[package]
name = "qrcode-png"
version = "0.4.1"
edition = "2021"

description = "Generate QR code in png format"
homepage = "https://github.com/wyhaya/qrcode-png"
repository = "https://github.com/wyhaya/qrcode-png.git"
authors = ["wyhaya <wyhaya@gmail.com>"]
license = "MIT"
readme = "README.md"

keywords = [
    "qrcode",
    "encoder",
    "image",
    "png"
]

[dependencies]
png = "0.17.6"
qrcodegen = "1.8.0"
